# failure-forensics

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
data/documents/: access_control_policy.txt  audit_finding_ac2.txt  risk_register_excerpt.txt
examples/: sample_run.txt
src/forensics/: __init__.py  __main__.py  cli.py  config.py  demo.py  errors.py  obs.py
src/forensics/app/: __init__.py  diff.py  graph.py  main.py
src/forensics/eval/: __init__.py  dataset.py  runner.py
src/forensics/pipeline/: __init__.py  failure_modes.py  llm.py  schemas.py  steps.py
src/forensics/rca/: __init__.py  judge.py  taxonomy.py  walk.py
src/forensics/tracing/: __init__.py  instrument.py  redaction.py  spans.py  store.py
tests/: conftest.py  test_app.py  test_cli.py  test_config.py  test_demo.py  test_eval.py  test_pipeline.py  test_rca.py  test_redaction.py  test_smoke.py  test_tracing.py
