[project]
name = "failure-forensics"
version = "0.1.0"
description = "Observability and root-cause analysis for multi-step AI pipelines."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rick Ramirez" }]
dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.7",
    "streamlit>=1.39",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "mypy>=1.11",
    "pre-commit>=3.7",
]

[project.scripts]
forensics = "forensics.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/forensics"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
# 3.12 only affects how mypy parses third-party stubs (e.g. numpy); our own code
# remains 3.11-compatible, enforced by ruff's target-version.
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "silent"
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["forensics"]
omit = ["*/app/main.py", "*/__main__.py"]

[tool.coverage.report]
fail_under = 85
show_missing = true
